added bare bones site

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>The new universe of game publishing by Quarter Spiral</title>
+    <title>Quarter Spiral - Making small big</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -20,9 +20,11 @@
 
  <body>
 
-    <h1>Quarter Spiral</h1>
+    <img src="images/quarter-spiral-logo-large.png" width="271" height="271" alt="Quarter Spiral Logo" />
 
-    <p>This rocks</p>
+    <p><a href="http://soon.quarterspiral.com" title="Sign up now and we'll let you know when we are ready for your games." class="btn btn-success btn-large">Coming soon!<br /><strong>Be ready...</strong></a></p>
+
+
 
   </body>
 </html>
